--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "now-ui-kit-angular": {
+    "claggett-power-skating": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -53,18 +53,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "now-ui-kit-angular:build"
+            "browserTarget": "claggett-power-skating:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "now-ui-kit-angular:build:production"
+              "browserTarget": "claggett-power-skating:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "now-ui-kit-angular:build"
+            "browserTarget": "claggett-power-skating:build"
           }
         },
         "test": {
@@ -100,7 +100,7 @@
         }
       }
     },
-    "now-ui-kit-angular-e2e": {
+    "claggett-power-skating-e2e": {
       "root": "e2e",
       "sourceRoot": "e2e",
       "projectType": "application",
@@ -109,7 +109,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "./protractor.conf.js",
-            "devServerTarget": "now-ui-kit-angular:serve"
+            "devServerTarget": "claggett-power-skating:serve"
           }
         },
         "lint": {
@@ -124,7 +124,7 @@
       }
     }
   },
-  "defaultProject": "now-ui-kit-angular",
+  "defaultProject": "claggett-power-skating",
   "schematics": {
     "@schematics/angular:component": {
       "prefix": "app",
