--- a/angular.json
+++ b/angular.json
@@ -11,11 +11,12 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist",
+            "outputPath": "dist/claggett",
             "index": "src/index.html",
             "main": "src/main.ts",
             "tsConfig": "src/tsconfig.app.json",
             "polyfills": "src/polyfills.ts",
+            "aot": true,
             "allowedCommonJsDependencies": ["nouislider", "rellax"],
             "assets": [
               "src/assets",
